[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pbjson"
dynamic = ["version"]
description = "Packed Binary JSON encoder/decoder for Python"
readme = "README.md"
license = ""
authors = [
    { name = "Scott Maxwell", email = "scott@codecobblers.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Academic Free License (AFL)",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.hatch.version]
path = "pbjson/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pbjson",
]

[project.urls]
"Homepage" = "https://github.com/scottkmaxwell/pbjson"
"Bug Tracker" = "https://github.com/scottkmaxwell/pbjson/issues"
